[package]
name = "pdf-axum-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
poppler-rs = "0.22.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
